# OmniAgent

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: config.py  main.py  mcp_server.py
backend/api/routes/: metrics.py  tasks.py
backend/core/: agent_graph.py  agents.py  mcp_client.py  state.py  tools.py
backend/finetuning/: dataset.py  merge.py  train.py
backend/observability/: evaluator.py  tracer.py
backend/rag/: graph_rag.py  hybrid_retriever.py  ingestion.py  vector_store.py
backend/workers/: celery_app.py  tasks.py
docs/: architecture.md
frontend/: app.py
scripts/: evaluate.py  ingest.py
tests/: test_agent_flow.py  test_api.py
