[project]
name = "omniagent"
version = "0.1.0"
description = "OmniAgent production-ready multi-agent starter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "networkx>=3.3",
  "rank-bm25>=0.2.2",
  "numpy>=1.26",
  "celery>=5.4",
  "redis>=5.2",
  "streamlit>=1.44",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
